vlib/v/parser/tests/builtin_sum_type_type_name_err.vv
type map = int | u64
